# Persistence-Of-Vision

./: .gitignore  .lsp.json  AGENTS.md  CLAUDE.md  POV_DISPLAY.md  POV_TELEMETRY_ANALYSIS_GUIDE.md  README.md  analyze_timing.py  analyze_timing_corrected.py  platformio.ini  pyproject.toml
led_display/: .clangd  AGENTS.md  CLAUDE.md  POV_DISPLAY.md  README.md  platformio.ini  pyproject.toml
led_display/data/: sagetv_remote_mapping.json
led_display/include/: Accelerometer.h  BufferManager.h  DisplayState.h  ESPNowComm.h  Effect.h  EffectManager.h  EffectRegistry.h  FrameProfiler.h  HallEffectDriver.h  HallSimulator.h  Imu.h  OutputTask.h  RenderContext.h  RenderTask.h  RevolutionTimer.h  RotorDiagnosticStats.h  SlotTiming.h  StatsOverlay.h  TelemetryTask.h  WatchdogHelper.h  cartesian_helpers.h  geometry.h  hardware_config.h  pixel_utils.h  polar_helpers.h  types.h
led_display/samples/: 2025-11-27-effect-1-with-extra.txt  2025-11-28-effect-0-big.txt  2025-11-28-effect-2.txt  2025-11-28-effect-3.txt  2025-11-28-effect-4.txt
led_display/src/: Accelerometer.cpp  BufferManager.cpp  ESPNowComm.cpp  FrameProfiler.cpp  HallSimulator.cpp  Imu.cpp  OutputTask.cpp  RenderTask.cpp  RotorDiagnosticStats.cpp  TelemetryTask.cpp  blob_types.h  main.cpp
motor_controller/: .gitignore  AGENTS.md  CLAUDE.md  partitions.csv  platformio.ini  pyproject.toml
motor_controller/include/: RTOSConfig.h
motor_controller/src/: command_processor.cpp  command_processor.h  commands.h  encoder_control.cpp  encoder_control.h  espnow_comm.cpp  espnow_comm.h  hardware_config.h  led_indicator.cpp  (+12 more)
(+257 files in other folders)
